Added code for scrapping

--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,9 @@
         ]
         }
     ],
+    "permissions": [
+        "storage"
+      ],
     "web_accessible_resources": [{
         "resources": [ "data/stuff.json" ],
         "matches": [ "https://vse.apru.org/*" ]
